Apr 19, 2006

 * JW: Make library(chr) load its private stuff silent.

Apr 14, 2006
 
 * TS: Bug fix: too many guards were locked.

Apr 11, 2006

  * TS: Most runtime library predicates are now specialized
	per constraint, avoiding generic =.. and lists code.

	Mayor update to suspension term layout. Layout may now
        differ from one constraint to the other. Some unused suspension
        fields (continuation goal and generation number) are omitted.
	Further analysis can remove more fields.

        Default store constraints now each have
        their own global variable: a list of all the suspensions.
	Removal from this list is now O(1) thanks to setarg/1 and
        back pointers in the suspension terms. This can cause time
	time complexity improvements in solvers that always have 
	variable indexing on their constraints.

        Ground, non-indexed constraints are now removed from
	their global list store in O(1), as for the default store.

	Minor bug fixes in a number of places.

Mar 16, 2006

  * TS: Fixed subtle bug in ai_observation analysis,
        that caused goal sequences to only generate
        the optimistic default answer pattern, leading
        to invalid 'not observed' conclusions.
  * TS: Variable indexing/suspension analysis now ignores functor/3
        in guards. Could be extended to other built-ins
        that cause an error when arguments are not
        properly instantiated.

Mar 11, 2006
  
  * TS: Renamed global variable id to chr_id in chr_runtime.pl.

Mar 9, 2006
  * JS: Synchronization with experimental version:
        - minor optimizations, e.g. efficient lookups with statically known
          instantiated data 
        - new alternative syntax for passive declarations
	- new dense_int built-in type + underlying store
	- new type alias definitions, like in Mercury

Mar 4, 2006
  * BD: small changes in chr_compiler_options.pl and chr_translate.chr
 	affecting only the SICStus port

Mar 3, 2006