@@ -78,7 +78,6 @@ chr_compile(From, To, MsgLevel) :-
 
 %% SWI begin
 specific_declarations([:- use_module('chr_runtime'),
-		       :- style_check(-singleton),
 		       :- style_check(-discontiguous)|Tail], Tail).
 %% SWI end
 
